# stock-orchestrator

./: .env.example  .gitignore  .mcp.json  .prompt-cache.json  00_setup_guide.md  01_project_instructions.md  AGENTS.md  CLAUDE.md  CLAUDE_v2.md  CURRENT_STATE.md  INVESTMENT_POLICY.md  README.md  README_v2.md  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: ai_runtime_adapter.md  candidate_board.md  context_summary.md  deca_system_spec.md  fiscal_ai_integration.md  flow_comparison.md  flow_data_collector.md  flow_streak_scanner.md  flow_volume_scanner.md  foreign_streak_scanner.md  fundamentals_collector.md  market_data_crawler.md  market_radar.md  paper_trading_options.md  pick_report_template.md  pre_trade_checklist.md  pullback_screen.md  scripts_lib_refactor_candidates.md  us_close_korea_preopen.md
picks/: 2026-05-11_000660.md  2026-05-11_005930.md  2026-05-11_011790.md  2026-05-12_454910.md  2026-05-12_flow_momentum_picks.md  2026-05-14_046890.md  2026-05-14_329180.md  2026-05-15_066570.md  2026-05-18_006800.md  2026-05-19_207940.md  2026-05-22_001440_report.md  2026-05-27_353200.md  2026-06-02_007660.md  2026-06-02_018260.md  2026-06-04_009150.md  2026-06-04_402340.md  2026-06-05_012450.md  2026-06-09_077360.md  2026-06-09_088980.md  2026-06-09_217590.md  INDEX.md  WATCHLIST.md  dashboard.html  disclosure_log.md  entry_exit_timing_playbook.md  entry_exit_timing_playbook_066570.md  factor_scores.md  paper_price_snapshot.json  paper_trading_ledger.csv  paper_trading_rules.json  paper_trading_state.json  performance_postmortem_2026_06.md  (+6 more)
(+155 files in other folders)
